@@ -1,1 +1,21 @@
 # NJCLabsInternship
+
+This code written for Internship.
+
+# Code contains the following tasks
+1. Connect to the SQLite database
+2. Creating a new SQLite database
+3. Creating a new Table
+4. Inserting data into Movies table 
+5. Querying data from Movies table 
+    1. retrives whole table data
+    2. retrives movie details of specified actor.
+   
+   
+# Instructions to compile and run
+We have used preview features so, use the following command for compilation and execution.
+
+```javac --release 13 --enable-preview Database2.java```
+
+```java --enable-preview Database2```
+
